--- a/examples/report_valid.html
+++ b/examples/report_valid.html
@@ -18926,7 +18926,10 @@ D_VIT_ZAGRADA          6       13
         <summary>Analysis Errors</summary>
         <pre><code>
 PARSER ERRORS:
-Parse error: Parse error at line 4: unexpected token OP_PRIDRUZI
+Sintaksna greška na retku 4.
+Pročitan uniformni znak: OP_PRIDRUZI (=).
+Očekivani uniformni znakovi: AMPERSAND, ASTERISK, BROJ, IDN, L_ZAGRADA, MINUS, NIZ_ZNAKOVA, OP_DEC, OP_INC, OP_NEG, OP_TILDA, PLUS, ZNAK.
+
         </code></pre>
       </details>
     </section>
@@ -18996,7 +18999,10 @@ D_VIT_ZAGRADA          6       13
         <summary>Analysis Errors</summary>
         <pre><code>
 PARSER ERRORS:
-Parse error: Parse error at line 4: unexpected token OP_PRIDRUZI
+Sintaksna greška na retku 4.
+Pročitan uniformni znak: OP_PRIDRUZI (=).
+Očekivani uniformni znakovi: AMPERSAND, ASTERISK, BROJ, IDN, L_ZAGRADA, MINUS, NIZ_ZNAKOVA, OP_DEC, OP_INC, OP_NEG, OP_TILDA, PLUS, ZNAK.
+
         </code></pre>
       </details>
     </section>
@@ -19066,7 +19072,10 @@ D_VIT_ZAGRADA          6       13
         <summary>Analysis Errors</summary>
         <pre><code>
 PARSER ERRORS:
-Parse error: Parse error at line 4: unexpected token OP_PRIDRUZI
+Sintaksna greška na retku 4.
+Pročitan uniformni znak: OP_PRIDRUZI (=).
+Očekivani uniformni znakovi: AMPERSAND, ASTERISK, BROJ, IDN, L_ZAGRADA, MINUS, NIZ_ZNAKOVA, OP_DEC, OP_INC, OP_NEG, OP_TILDA, PLUS, ZNAK.
+
         </code></pre>
       </details>
     </section>
@@ -19136,7 +19145,10 @@ D_VIT_ZAGRADA          6       13
         <summary>Analysis Errors</summary>
         <pre><code>
 PARSER ERRORS:
-Parse error: Parse error at line 4: unexpected token OP_PRIDRUZI
+Sintaksna greška na retku 4.
+Pročitan uniformni znak: OP_PRIDRUZI (=).
+Očekivani uniformni znakovi: AMPERSAND, ASTERISK, BROJ, IDN, L_ZAGRADA, MINUS, NIZ_ZNAKOVA, OP_DEC, OP_INC, OP_NEG, OP_TILDA, PLUS, ZNAK.
+
         </code></pre>
       </details>
     </section>
@@ -19606,7 +19618,10 @@ D_VIT_ZAGRADA          6       13
         <summary>Analysis Errors</summary>
         <pre><code>
 PARSER ERRORS:
-Parse error: Parse error at line 4: unexpected token OP_PRIDRUZI
+Sintaksna greška na retku 4.
+Pročitan uniformni znak: OP_PRIDRUZI (=).
+Očekivani uniformni znakovi: AMPERSAND, ASTERISK, BROJ, IDN, L_ZAGRADA, MINUS, NIZ_ZNAKOVA, OP_DEC, OP_INC, OP_NEG, OP_TILDA, PLUS, ZNAK.
+
         </code></pre>
       </details>
     </section>
